# FireANTs

./: .gitattributes  .gitignore  pyproject.toml
fireants/scripts/template/: build_template.py  registration_pipeline.py
fireants/scripts/template/configs/: fmost_25um.yaml  oasis_deformable.yaml
